--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,7 @@
-# Dockerfile.client
-FROM golang:latest
-
+# client/Dockerfile.client
+FROM golang:1.22-alpine
 WORKDIR /app
-COPY . .
-RUN go build -o client client_main.go
-
-CMD ["./client"]
+COPY client_main.go .
+COPY ../go.mod .
+RUN go build -o client_main client_main.go
+CMD ["./client_main"]
