--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,16 @@
-# client/Dockerfile.client
 FROM golang:1.22-alpine
+
 WORKDIR /app
-COPY client_main.go .
-COPY ../go.mod .
+
+COPY go.mod .
+COPY go.sum .
+COPY main.go .
+COPY client/client_main.go ./client_main.go
+# Remove any problematic COPY for `definition` unless needed
+
+RUN go mod download
+RUN go build -o main main.go
 RUN go build -o client_main client_main.go
-CMD ["./client_main"]
+
+EXPOSE 8081
+CMD ["./main"]
